src/assets/styles/pages/Home/FirstBlock.module.scss
.container {
  justify-content: space-between;
  display: flex;
  padding-block: 90px;
  background-image: url(../../../img/FirstBlock.png);
  background-size: cover;
  background-position: center;
  height: 86.2vh;
}

.title {
  width: 45vw;
  font-size: 3vw;
  text-wrap: balance;
  font-family: Inter;
  font-weight: 300;
  color: white;
  span {
    &:first-child {
      font-size: 100px;
      font-weight: 400;
    }
    display: block;
  }
}

.block {
  margin: 0 auto;
  width: 90%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  img {
    width: 100%;
  }
}

.block_title {
  display: flex;
  flex-direction: column;
  gap: 47px;
}

.button {
  padding: 0.6rem 4rem 0.6rem 4rem;
  border-radius: 10px;
  border: 2px solid #19746b;
  color: #fff;
  font-size: 1.3rem;
  font-family: "Inter";
  background: #19746b;
  cursor: pointer;
  transition: all 0.2s;
  will-change: contents;
  &:hover {
    transform: scaleX(1.01);
    transition: all 0.2s;
  }
}

.ConversationImage {
  width: 75%;
  @media screen and (max-width: 580px) {
    width: 100%;
  }
}

@media (max-width: 768px) {
  .container {
    height: fit-content;
    display: flex;
    position: relative;
    justify-content: center;
    background: none;
    padding-block: unset;
    margin-top: 50px;
    overflow-x: hidden;

    &::before {
      margin: -20px;
      content: "";
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background-size: cover;
      background-clip: border-box;
      background-position: center;
      z-index: -1;
      filter: blur(5px);
      background-image: url(../../../img/FirstBlock.png);
    }
    .ImageCar {
      display: none;
    }
  }

  .block {
    display: flex;
    justify-content: center;
    margin: 120px 0;
  }

  .title {
    width: 30rem;
    font-family: Inter;
    font-size: 40px;
    font-weight: 400;
    text-align: center;
    span {
      &:first-child {
        font-size: 40px;
        color: rgb(19, 209, 190);
        padding-right: 0.5rem;
      }
      display: inline;
    }
  }

  .block_title {
    display: flex;
    align-items: center;
    gap: 0px;
    flex-direction: column;
  }

  .button {
    margin-top: 57px;
    font-weight: 200;
    border-radius: 10px;
  }
}

@media (max-width: 620px) {
  .title {
    font-size: 6.4vw;

    span {
      &:first-child {
        font-size: 6.4vw;
      }
    }
  }
}

@media (max-width: 399px) {
  .title {
    width: 20rem;
  }
}

